--- a/ZTV WZIP/Info.plist
+++ b/ZTV WZIP/Info.plist
@@ -18,6 +18,8 @@
 	<string>0.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleVersion</key>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
